--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -664,7 +664,7 @@ Consequently, under the assumption of equal population means, our data (or more 
 
 To assign a p-value to the F-value that we obtained, $F = 57.96$ we determine the proportion of the Central F-distribution (with 1 and 24 degrees of freedom) that is equal to, or more extreme, than the F-value we obtained in our study. If you inspect the Central F-distribution above you can see that the current F-value of 57.96 doesn't even fit on the graph - because the x-axis only goes to 10. We need a new graph with a wider range of values on the x-axis. This graph is presented below:
 
-Remember the p-value is the **probability of our data, or more extreme data** assuming the null hypothesis is true.
+Remember the p-value is the **probability of our data, or more extreme data,** assuming the null hypothesis is true.
 
 ### $A$ conceptual (juggling)
 
@@ -861,7 +861,7 @@ In the graph above you can see the F-value we obtained (3.62) is somewhat to the
 
 Consequently, under the assumption of equal population means, our data (or more extreme data) is very unlikely ($p = .042$). Therefore, we reject the assumption that the population means (i.e., the population means for low, medium, and high preparation) are equal. We conclude those population means **may** be different.
 
-Remember the p-value is the **probability of our data, or more extreme data** assuming the null hypothesis is true.
+Remember the p-value is the **probability of our data, or more extreme data,** assuming the null hypothesis is true.
 
 ### $B$ conceptual (preparation)
 
