--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -1037,6 +1037,11 @@ F &= \frac{\text{estimated total variance}}{\text{estimated variance due to rand
 &=  4.49\\
 \end{align}
 
+### p-value for $AB$
+
+This sample F-value tells us that, with these data, the **estimated** total variance of juggling means is 4.49 times larger than than we would **estimate** due to random sampling alone. Is this large or small? It's hard to tell. As well,  notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is, when the population means are equal, in the context of the the number of populations and the sample sizes. [Recall Central F-distributions from a previous chapter.](https://dstanley4.github.io/psyc6060bookdown/deep-dive-sampling-and-anova.html#central-f-distributions)
+
+To interpret an F-value for the main effect of $AB$, you need to think about all the F-values that could have occurred - when the population means are equal (i.e., $\sigma_{AB}^2=0$). More specifically, we have to imagine all of the F-values with 2 and 24 degrees of freedom in the Central F-distribution. This distribution is illustrated below:
 
 ```{r, echo = F}
 fcentral = rf(n = 100000, df1=2, df2=24)
@@ -1050,6 +1055,8 @@ ggplot(mdf, aes(x=fvalue)) +
   ylab("Frequency") +
   theme_classic(18)
 ```
+
+To assign a p-value to the F-value that we obtained, $F = 4.49$ we determine the proportion of the Central F-distribution (with 2 and 24 degrees of freedom) that is equal to, or more extreme, than the F-value we obtained in our study. The F-value we obtained is position in Central F-distribution below.
 
 
 ```{r, echo = F}
@@ -1068,10 +1075,13 @@ ggplot(mdf, aes(x=fvalue)) +
 ```
 
 
-We know that the degrees of freedom for this F-value are (2,24). We we can ask the question, **when the population means are the same** (i.e., $\sigma_{AB}^2=0$) how likely is it that would would obtain an F-value this large or larger. That is, what is the p-value for this F-value? It turns out the p-value is very small ($p = 022$). Consequently, under the assumption of equal population means, our data (or more extreme data) is very unlikely ($p  = 022$). Therefore, we reject that starting assumption that the population means (i.e., the population means for preparation) are equal. We conclude those population means **may** be different.
+In the graph above you can see the F-value we obtained (4.49) is somewhat to the right side of the Central F-distribution. In fact, the proportion of the F-distribution that is equal to, or more extreme, than 4.49 is .022 (i.e. 2.2%). So we say the p-value is $p = .022$.
 
+Consequently, under the assumption of equal residual population means, our data (or more extreme data) is very unlikely ($p = .022$). Therefore, we reject the assumption that the population residual means are equal. We conclude those population means **may** be different. Which implies there is an interaction.
 
+When there is an interaction you are concluding the two independent variables combine to influence the dependent variable. In our example study, you could say the impact of juggling on calmness before the exam depends on how much students prepared. Or you also say the impact of preparation on calmness before the exam depends on whether students juggled or not during breaks.
 
+Remember the p-value is the **probability of our data, or more extreme data,** assuming the null hypothesis is true.
 
 
 #### $AB$ conceptual (interaction)
