--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -1081,7 +1081,7 @@ When there is an interaction you are concluding the two independent variables co
 Remember the p-value is the **probability of our data, or more extreme data,** assuming the null hypothesis is true.
 
 
-#### $AB$ conceptual (interaction)
+### $AB$ conceptual (interaction)
 
 Preparation| Formula | Expected value | degrees of freedom |
 :--------------:|:--------------:|:------------------:|:---------------:|
@@ -1089,7 +1089,7 @@ Estimated total variance | $\frac{\sum (\overline{x_{residual_i}} - \overline{\o
 Estimated variance sampling error | $\frac{s_{people}^2}{n}$ |$\frac{\sigma_{people}^2}{n}$ | $ab(n-1)$
 Comparison using $F$-ratio |$\frac{\frac{\sum (\overline{x_{residual_i}} - \overline{\overline{x_{residual}}})^2}{(a-1)(b-1)}}{                  \frac{s_{people}^2}{n}}$  |  $\frac{\frac{\sigma_{people}^2}{n} + \sigma_{AB}^2}{    \frac{\sigma_{people}^2}{n}}$ | $[(a-1)(b-1),ab(n-1)]$
 
-#### $AB$ typical (interaction)
+### $AB$ typical (interaction)
 
 
 ```{r, out.width="100%", echo = FALSE}
