--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -1174,17 +1174,35 @@ Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer
 
 #### contrast
 
+Obtain the sample data for these cells
+
+```{r}
+juggling_high_preparation <- nway_data %>%
+  filter(juggling == "yes")%>%
+  filter(preparation == "high")%>%
+  pull(calm)
+
+
+juggling_low_preparation <- nway_data %>%
+  filter(juggling == "yes")%>%
+  filter(preparation == "low")%>%
+  pull(calm)
+```
+
 **Calculate F value for contrast**
 
 ```{r}
-contrast_means = c(xbar3, xbar1)
+xbar3 = mean(juggling_high_preparation, na.rm = TRUE)
+xbar1 = mean(juggling_low_preparation, na.rm = TRUE)
+
+means_to_compare = c(xbar3, xbar1)
 
 mse = (summary(lm_nway)$sigma)^2 # or just 60 for MSE
 df1 = 2 -1 # two means - 1
 df2 = 24 # degrees of freedom for MSE
 n = 5 # 5 per cell
 
-Fvalue = var(contrast_means)/(mse/n)
+Fvalue = var(means_to_compare)/(mse/n)
 print(Fvalue)
 ```
 
@@ -1208,19 +1226,24 @@ print(pvalue_one_tail)
 xbar3 = mean(juggling_high_preparation, na.rm = TRUE)
 xbar1 = mean(juggling_low_preparation, na.rm = TRUE)
 
-# Approach 1 s.anova
+means_to_compare = c(xbar3, xbar1)
+comparison_weights = c(1, -1)
+
+n_per_cell = 5
+mse_n = 2*3*n_per_cell
+
+# Approach 1 to s.anova
 mse = 60 #s2_people
 s_people = sqrt(mse)
-mse_n = 2*3*5
 
-# Approach 2 s.anova
+# Approach 2 to s.anova
 # re-use lm_nway from initial ANOVA
 s_people = summary(lm_nway)$sigma
-mse_n = 2*3*5
 
-ci.sc(means = c(xbar3, xbar1),
-      c.weights = c(1, -1),
-      n =c(5,5),
+# Calculate standardizec contrast with CI
+ci.sc(means = means_to_compare,
+      c.weights = comparison_weights,
+      n = rep(n_per_cell, 2),
       s.anova = s_people,
       N = mse_n)
 ```
@@ -1238,8 +1261,6 @@ Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer
 | t-test (equal variances assumed) | $s_{people}^2 = \frac{s_1^2 + s_2^2}{2}$ | $t = \frac{\bar{x_3} \bar{x_1}}{\sqrt{\frac{s_{people}^2}{n_1}+\frac{s_{people}^2}{n_2}}}$ | $d = \frac{\bar{x_3} - \bar{x_1}}{s_{people}}$ |
 
 You can see from the above table that when you are comparing two means the contrast and t-test approaches are very similar. The only difference between the two approaches is how the population variance estimate ($s_{people}^2$) is calculated.
-
-
 
 
 ### contrasts with multiple means
