--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -12,7 +12,7 @@ In the last chapter, we considered a scenario where there was a single independe
 
 ## Now: N-way ANOVA
 
-In this chapter, we consider a scenario where there are multiple independent variables. We call it N-way because the N- refers to the number of independent variables. I must stress, however, that you should probably limit the number of independent variables in you study to **at most** three independent variables. Cognitive psychology research has demonstrated that human beings have a **very** hard time wrapping their minds around the the complexity associated with four independent variables and interpreting five independent variables is practically impossible. My understanding is that, somewhat ironically, 4-way interactions are not uncommon in Cognitive psychology. Be sure to read the article below though so that you can avoid the problems associated with having too many independent variables.
+In this chapter, we consider a scenario where there are multiple independent variables. We call it N-way because the N- refers to the number of independent variables. I must stress, however, that you should probably limit the number of independent variables in you study to **at most** three independent variables. Cognitive psychology research has demonstrated that human beings have a **very** hard time wrapping their minds around the complexity associated with four independent variables and interpreting five independent variables is practically impossible. My understanding is that, somewhat ironically, 4-way interactions are not uncommon in Cognitive psychology. Be sure to read the article below though so that you can avoid the problems associated with having too many independent variables.
 
 [Halford, G. S., Baker, R., McCredden, J. E., & Bain, J. D. (2005). How many variables can humans process?. Psychological science, 16(1), 70-76.
 Chicago.](https://doi.org/10.1111/j.0956-7976.2005.00782.x)
@@ -76,7 +76,7 @@ apa.aov.table(lm_nway,
 knitr::include_graphics("ch_deeper_nway/images/nway_table_clean.png")
 ```
 
-Notice the preparation, juggling, and preparation x juggling rows on this table. In particular, the F-value for each of these rows. In  the remainder of the chapter we will review how these values are obtained - and their conceptual meaning.
+Notice the preparation, juggling, and preparation x juggling rows on this table. In particular, the $F$-value for each of these rows. In  the remainder of the chapter we will review how these values are obtained - and their conceptual meaning.
 
 
 ## Multiple frames of reference
@@ -204,7 +204,7 @@ So:
 
 $\sigma_{people}^2 =\sigma_{cells}^2=\sigma_{A}^2=\sigma_{B}^2$
 
-We typically refer to this as the **homogeneity of POPULATION variances** assumption. With this assumption, in this example, we are referring the the variance of **participants calmness scores** across the populations in the variance frames of reference.
+We typically refer to this as the **homogeneity of POPULATION variances** assumption. With this assumption, in this example, we are referring the variance of **participants calmness scores** across the populations in the variance frames of reference.
 
 ## Estimating population variance
 
@@ -344,7 +344,7 @@ Cell | Juggling level | Preparation level | Population variance | Sample estimat
 Recall, however, the homogeneity of population variances assumption. We assume 
 $\sigma_{people}^2=\sigma_1^2=\sigma_2^2=\sigma_3^2=\sigma_4^2=\sigma_5^2=\sigma_6^2=\sigma^2=?$. 
 
-Consequently, the sample variance estimates ($s_1^2$, $s_2^2$, $s_3^2$, $s_4^2$, $s_5^2$, $s_6^2$) are estimates of the the same population value of calmness scores, $\sigma_{people}^2$.
+Consequently, the sample variance estimates ($s_1^2$, $s_2^2$, $s_3^2$, $s_4^2$, $s_5^2$, $s_6^2$) are estimates of the same population value of calmness scores, $\sigma_{people}^2$.
 
 Therefore, a better way to display the population variance estimates is with the table below. 
 
@@ -521,7 +521,10 @@ Notice that the degrees of freedom for the sampling error variance is the same f
 
 ### Total variance $A$
 
-We might wonder if there is an effect of juggling on calmness scores ignoring the effect of preparation. Said another way, we might wonder if the mean of the **yes** juggling population ($\mu_{A1}$) is different from the mean of the **no** juggling population ($\mu_{A2}$). We examine this question by looking the variance in the population means. If we knew the population means we could:
+We might wonder if there is an effect of juggling on calmness scores ignoring the effect of preparation. Said another way, we might wonder if the mean of the **yes** juggling population ($\mu_{A1}$) is different from the mean of the **no** juggling population ($\mu_{A2}$). We examine this question by looking the **variance** in the population means. 
+
+
+If we knew the **population means** we could:
 
 1) Calculate the grand mean (i.e., $\mu_A$). That is, the mean of the two juggling population means. Recall because there are two levels of juggling (i.e., two populations), $a = 2$. Note that this is the same as the taking the mean of **all participants from both populations** (assuming equal population sizes).
 
@@ -546,16 +549,16 @@ $$
 \end{aligned}
 $$
 
-As with the grand mean, we can't calculate this population level information.
+If the **variance of the population means** is zero than the populations means are the same. If the variance of the populations means is greater than zero than the population means are different.
 
-So we need to rely upon sample-level information to estimate the the variability in population means.  You can check out the sample-level means in the diagram below. As we discussed previously. For the $A$ independent variable, these means have a sample size of $15$.
+Unfortunately, we don't have access to population-level means. So we need to rely upon sample-level information to estimate the variability in population means.  You can check out the sample-level means in the diagram below. As we discussed previously. For the $A$ independent variable, these means have a sample size of $15$.
 
 ```{r, out.width="100%", echo = FALSE}
 knitr::include_graphics("ch_deeper_nway/images/nway_design_A_sample.png")
 ```
 
 
-1) We ESTIMATE the grand mean using the sample-level means. We refer to our grand mean estimate using $\bar{bar{bar}}$. There are two bars about the $x$ to indicate that it is the mean of means. **Note that this "grand mean" of participants is the same as taking the mean of all participants (assuming equal cell sizes).**
+1) We ESTIMATE the grand mean using the mean of the sample-level means. We refer to our grand mean estimate using $\bar{bar{bar}}$. There are two bars about the $x$ to indicate that it is the mean of means. **Note that this "grand mean" of participants is the same as taking the mean of all participants (assuming equal cell sizes).**
 
 $$
 \begin{align}
@@ -586,9 +589,9 @@ In mathematical terms we say the Expected Mean Square is:
 
 $\text{Expected Mean Square} = \frac{\sigma_{people}^2}{nb} +  \sigma_{\mu_A}^2$
 
-### F-value for $A$
+### $F$-value for $A$
 
-Recall that we now have two estimates for the variability in juggling means (total variance estimate, sampling variance estimate).
+Recall that we now have two estimates for the variability in juggling means (total variance estimate, random sampling variance estimate).
 
 1) In the section immediately above, we obtained a variance $\frac{\sum (\overline{x_{A_i}}-\bar{\bar{x}})^2}{a-1}=231.8422$. This value reflects random sampling error variance and the variance of the population mean.
 
@@ -603,7 +606,7 @@ Estimated total variance | $\frac{\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1}=231.8422
 Estimated variance sampling error | $\frac{s_{people}^2}{nb} = 4.0$ |$\frac{\sigma_{people}^2}{nb}$ | $ab(n-1) = 24$
 
 
-We calculate an F-value to compare these two values:
+We calculate an $F$-value to compare these two values:
 
 $$
 \begin{align}
@@ -619,11 +622,11 @@ F &= \frac{\text{estimated total variance}}{\text{estimated variance due to rand
 \end{align}
 $$
 
-### p-value for $A$
+### $p$-value for $A$
 
-This sample F-value tells us that, with these data, the **estimated** total variance of juggling means is 57.96 times larger than than we would **estimate** due to random sampling alone. This sounds like a large number - but it may not be. Notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is, when the population means are equal, in the context of the the number of populations and the sample sizes. [Recall Central F-distributions from a previous chapter.](https://dstanley4.github.io/psyc6060bookdown/deep-dive-sampling-and-anova.html#central-f-distributions)
+This sample $F$-value tells us that, with these data, the **estimated** total variance of juggling means is 57.96 times larger than than we would **estimate** due to random sampling alone. This sounds like a large number - but it may not be. Notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is, when the population means are equal, in the context of the number of populations and the sample sizes. [Recall Central $F$-distributions from a previous chapter.](https://dstanley4.github.io/psyc6060bookdown/deep-dive-sampling-and-anova.html#central-f-distributions)
 
-To interpret an F-value for the main effect of $A$, you need to think about all the F-values that could have occurred - when the population means are equal (i.e., $\sigma_{A}^2=0$). More specifically, we have to imagine all of the F-values with 1 and 24 degrees of freedom in the Central F-distribution. This distribution is illustrated below:
+To interpret an $F$-value for the main effect of $A$, you need to think about all the $F$-values that could have occurred - when the population means are equal (i.e., $\sigma_{A}^2=0$). More specifically, we have to imagine all of the $F$-values with 1 and 24 degrees of freedom in the Central $F$-distribution. This distribution is illustrated below. **It reflects, for this main effect, all the $F$-values that could occur when the populations means are equal - due to the fact we are using random samples.**
 
 ```{r, echo = F}
 fcentral = rf(n = 100000, df1=1, df2=24)
@@ -638,7 +641,7 @@ ggplot(mdf, aes(x=fvalue)) +
   theme_classic(18)
 ```
 
-To assign a p-value to the F-value that we obtained, $F = 57.96$ we determine the proportion of the Central F-distribution (with 1 and 24 degrees of freedom) that is equal to, or more extreme, than the F-value we obtained in our study. If you inspect the Central F-distribution above you can see that the current F-value of 57.96 doesn't even fit on the graph - because the x-axis only goes to 10. We need a new graph with a wider range of values on the x-axis. This graph is presented below:
+To assign a $p$-value to the $F$-value that we obtained, $F = 57.96$ we determine the proportion of the Central $F$-distribution (with 1 and 24 degrees of freedom) that is equal to, or more extreme, than the $F$-value we obtained in our study. If you inspect the Central $F$-distribution above you can see that the current $F$-value of 57.96 doesn't even fit on the graph - because the x-axis only goes to 10. We need a new graph with a wider range of values on the x-axis. This graph is presented below:
 
 
 ```{r, echo = F}
@@ -657,16 +660,20 @@ ggplot(mdf, aes(x=fvalue)) +
 ```
 
 
-In this graph you can see the F-value we obtained (57.96) is completely to the right of Central F-distribution.  In fact, the proportion of the F-distribution that is equal to, or more extreme, than 57.96 is < .001. So we say the p-value is p < .001.
+In this graph you can see the $F$-value we obtained (57.96) is completely to the right of Central $F$-distribution.  In fact, the proportion of the $F$-distribution that is equal to, or more extreme, than 57.96 is < .001. So we say the $p$-value is $p < .001$.
 
 Consequently, under the assumption of equal population means, our data (or more extreme data) is very unlikely ($p < .001$). Therefore, we reject the assumption that the population means (i.e., the population means for yes and no juggling) are equal. We conclude those population means **may** be different.
 
 
-To assign a p-value to the F-value that we obtained, $F = 57.96$ we determine the proportion of the Central F-distribution (with 1 and 24 degrees of freedom) that is equal to, or more extreme, than the F-value we obtained in our study. If you inspect the Central F-distribution above you can see that the current F-value of 57.96 doesn't even fit on the graph - because the x-axis only goes to 10. We need a new graph with a wider range of values on the x-axis. This graph is presented below:
+To assign a $p$-value to the $F$-value that we obtained, $F = 57.96$ we determine the proportion of the Central $F$-distribution (with 1 and 24 degrees of freedom) that is equal to, or more extreme, than the $F$-value we obtained in our study. If you inspect the Central $F$-distribution above you can see that the current $F$-value of 57.96 doesn't even fit on the graph - because the x-axis only goes to 10. We need a new graph with a wider range of values on the x-axis. This graph is presented below:
 
-Remember the p-value is the **probability of our data, or more extreme data,** assuming the null hypothesis is true.
+Remember the $p$-value is the **probability of our data, or more extreme data,** assuming the null hypothesis is true.
 
-### $A$ conceptual (juggling)
+**WARNING: A small $p$-value ($p<.001$) does NOT indicate that an effect is a large effect. If you want to know the size of the effect you need to look at an effect size (e.g., partial $\eta^2$ or partial $\omega^2$.)**
+
+### $A$ conceptual recap (juggling)
+
+A recap of the conceptual basis for the calculations we've done for juggling is provided below. In the next section we map these conceptual calculations onto the typical way ANOVA information is presented -- which obscures the conceptual meaning.
 
   Juggling| Formula | Expected value | degrees of freedom |
 :--------------:|:--------------:|:------------------:|:---------------:|
@@ -677,7 +684,7 @@ Comparison using $F$-ratio | $\frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{a-1}
 
 ### $A$ typical (juggling)
 
-But this formula is typically rearranged in ANOVA output - due to the fact in the old days it made hand calculations somewhat easier. This typical rearrangement does obscure the conceptual meaning of the calculation though. But it is relatively simply algebra (see below). Note, the F-value does not change.
+The conceptual formula are algebraically rearranged in typical ANOVA output - due to the fact in the "old days" it made hand calculations somewhat easier. This typical rearrangement obscures the conceptual meaning of the calculations though. But it is relatively simply algebra (see below). Note, the $F$-value does not change.
 
 
 $$
@@ -693,7 +700,7 @@ F &= \frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{a-1}}{\frac{s_{people}^2}{nb}
 \end{align}
 $$
 
-From this rearrangement we use the labels below. Notice the inclusion of $nb$ in the $MS_{juggling}$ this is hard to explain unless you first understood the conceptual version of the equations above.
+From this rearrangement we use the labels below. Notice the inclusion of $nb$ in the $MS_{juggling}$ this is hard to explain unless you first understood the conceptual version of the equations above. Indeed, people who tend to explain ANOVA using a "between vs within" explanation usually need to skip over or "brush away" the $nb$ term in their explanations.
 
 $MS_{juggling} = nb\frac{\sum (\overline{x_{A_i}}-\bar{\bar{x}})^2}{a-1} = 3477.633$
 
@@ -718,7 +725,9 @@ Comparison using $F$-ratio | $\frac{\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1
 
 ### Total variance $B$
 
-Let's look at the other independent variable: preparation. As before, we might wonder if there is an effect of preparation on calmness scores ignoring the effect of juggling. Said another way, we might wonder if the means of the three preparation populations (low [$\mu_{B1}$], medium [$\mu_{B2}$], high [$\mu_{B3}$]) are different from each other. We examine this question by looking the variance in the population means. If we knew the population means we could:
+Let's look at the other independent variable: preparation. As before, we might wonder if there is an effect of preparation on calmness scores ignoring the effect of juggling. Said another way, we might wonder if the means of the three preparation populations (low [$\mu_{B1}$], medium [$\mu_{B2}$], high [$\mu_{B3}$]) are different from each other. We examine this question by looking the **variance** in the population means. 
+
+If we knew the **population** means we could:
 
 1) Calculate the grand mean (i.e., $\mu_B$). That is, the mean of the three preparation population means. Recall because there are three levels of preparation (i.e., three populations), $b = 3$. Note that this is the same as the taking the mean of **all participants from the three populations** (assuming equal population sizes). 
 
@@ -743,15 +752,15 @@ $$
 \end{aligned}
 $$
 
-As with the grand mean, we can't calculate this population level information.
+If the **variance of the population means** is zero than the populations means are the same. If the variance of the populations means is greater than zero than the population means are different.
 
-So we need to rely upon sample-level information to estimate the the variability in population means.  You can check out the sample-level means in the diagram below. As we discussed previously. For the $B$ independent variable, these means have a sample size of $10$.
+Unfortunately, we don't have access to population-level means. So we need to rely upon sample-level information to estimate the variability in population means.  You can check out the sample-level means in the diagram below. As we discussed previously. For the $B$ independent variable, these means have a sample size of $10$.
 
 ```{r, out.width="100%", echo = FALSE}
 knitr::include_graphics("ch_deeper_nway/images/nway_design_B_sample.png")
 ```
 
-1) We ESTIMATE the grand mean using the sample-level means. We refer to our grand mean estimate using $\bar{bar{bar}}$. There are two bars about the $x$ to indicate that it is the mean of means. **Note that this "grand mean" of participants is the same as taking the mean of all participants (assuming equal cell sizes).**
+1) We ESTIMATE the grand mean using the mean of the sample-level means. We refer to our grand mean estimate using $\bar{bar{bar}}$. There are two bars about the $x$ to indicate that it is the mean of means. **Note that this "grand mean" of participants is the same as taking the mean of all participants (assuming equal cell sizes).**
 
 $$
 \begin{align}
@@ -785,9 +794,9 @@ In mathematical terms we say the Expected Mean Square is:
 
 $\text{Expected Mean Square} = \frac{\sigma_{people}^2}{na} +  \sigma_{\mu_B}^2$
 
-### F-value for $B$
+### $F$-value for $B$
 
-Recall that we now have two estimates for the variability in juggling means (total variance estimate, sampling variance estimate).
+Recall that we now have two estimates for the variability in juggling means (total variance estimate, random sampling variance estimate).
 
 1) In the section immediately above, we obtained a variance $\frac{\sum (\overline{x_{B_i}}-\bar{\bar{x}})^2}{b-1}=21.72333$. This value reflects random sampling error variance and the variance of the population mean.
 
@@ -802,7 +811,7 @@ Estimated total variance | $\frac{\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}=21.72333
 Estimated variance sampling error | $\frac{s_{people}^2}{na} = 6.0$ |$\frac{\sigma_{people}^2}{na}$ | $ab(n-1) = 24$
 
 
-We calculate an F-value to compare these two values:
+We calculate an $F$-value to compare these two values:
 
 
 
@@ -820,11 +829,11 @@ F &= \frac{\text{estimated total variance}}{\text{estimated variance due to rand
 \end{align}
 $$
 
-### p-value for $B$
+### $p$-value for $B$
 
-This sample F-value tells us that, with these data, the **estimated** total variance of juggling means is 3.62 times larger than than we would **estimate** due to random sampling alone. Is this large or small? It's hard to tell. As well,  notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is, when the population means are equal, in the context of the the number of populations and the sample sizes. [Recall Central F-distributions from a previous chapter.](https://dstanley4.github.io/psyc6060bookdown/deep-dive-sampling-and-anova.html#central-f-distributions)
+This sample $F$-value tells us that, with these data, the **estimated** total variance of juggling means is 3.62 times larger than than we would **estimate** due to random sampling alone. Is this large or small? It's hard to tell. As well,  notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is, when the population means are equal, in the context of the number of populations and the sample sizes. [Recall Central $F$-distributions from a previous chapter.](https://dstanley4.github.io/psyc6060bookdown/deep-dive-sampling-and-anova.html#central-f-distributions)
 
-To interpret an F-value for the main effect of $B$, you need to think about all the F-values that could have occurred - when the population means are equal (i.e., $\sigma_{B}^2=0$). More specifically, we have to imagine all of the F-values with 2 and 24 degrees of freedom in the Central F-distribution. This distribution is illustrated below:
+To interpret an $F$-value for the main effect of $B$, you need to think about all the $F$-values that could have occurred - when the population means are equal (i.e., $\sigma_{B}^2=0$). More specifically, we have to imagine all of the $F$-values with 2 and 24 degrees of freedom in the Central $F$-distribution. This distribution is illustrated below. **It reflects, for this main effect, all the $F$-values that could occur when the populations means are equal - due to the fact we are using random samples.**
 
 ```{r, echo = F}
 fcentral = rf(n = 100000, df1=2, df2=24)
@@ -839,7 +848,7 @@ ggplot(mdf, aes(x=fvalue)) +
   theme_classic(18)
 ```
 
-To assign a p-value to the F-value that we obtained, $F = 3.62$ we determine the proportion of the Central F-distribution (with 2 and 24 degrees of freedom) that is equal to, or more extreme, than the F-value we obtained in our study. The F-value we obtained is position in Central F-distribution below.
+To assign a $p$-value to the $F$-value that we obtained, $F = 3.62$ we determine the proportion of the Central $F$-distribution (with 2 and 24 degrees of freedom) that is equal to, or more extreme, than the $F$-value we obtained in our study. The $F$-value we obtained is position in Central $F$-distribution below.
 
 ```{r, echo = F}
 fcentral = rf(n = 100000, df1=2, df2=24)
@@ -857,13 +866,15 @@ ggplot(mdf, aes(x=fvalue)) +
 ```
 
 
-In the graph above you can see the F-value we obtained (3.62) is somewhat to the right side of the Central F-distribution. In fact, the proportion of the F-distribution that is equal to, or more extreme, than 3.62 is .042 (i.e. 4.2%). So we say the p-value is $p = .042$.
+In the graph above you can see the $F$-value we obtained (3.62) is somewhat to the right side of the Central $F$-distribution. In fact, the proportion of the $F$-distribution that is equal to, or more extreme, than 3.62 is .042 (i.e. 4.2%). So we say the $p$-value is $p = .042$.
 
 Consequently, under the assumption of equal population means, our data (or more extreme data) is very unlikely ($p = .042$). Therefore, we reject the assumption that the population means (i.e., the population means for low, medium, and high preparation) are equal. We conclude those population means **may** be different.
 
-Remember the p-value is the **probability of our data, or more extreme data,** assuming the null hypothesis is true.
+Remember the $p$-value is the **probability of our data, or more extreme data,** assuming the null hypothesis is true.
 
-### $B$ conceptual (preparation)
+### $B$ conceptual recap (preparation)
+
+A recap of the conceptual basis for the calculations we've done for preparation is provided below. In the next section we map these conceptual calculations onto the typical way ANOVA information is presented -- which obscures the conceptual meaning.
 
 Preparation| Formula | Expected value | degrees of freedom |
 :--------------:|:--------------:|:------------------:|:---------------:|
@@ -873,8 +884,7 @@ Comparison using $F$-ratio | $\frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{b-1}
 
 ### $B$ typical (preparation)
 
-But this formula is typically rearranged in ANOVA output - due to the fact in the old days it made hand calculations somewhat easier. This typical rearrangement does obscure the conceptual meaning of the calculation though. But it is relatively simply algebra (see below). Note, the F-value does not change.
-
+The conceptual formula are algebraically rearranged in typical ANOVA output - due to the fact in the "old days" it made hand calculations somewhat easier. This typical rearrangement obscures the conceptual meaning of the calculations though. But it is relatively simply algebra (see below). Note, the $F$-value does not change.
 
 $$
 \begin{align}
@@ -890,7 +900,7 @@ F &= \frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{b-1}}{\frac{s_{people}^2}{na}
 \end{align}
 $$
 
-From this rearrangement we use the labels below. Notice the inclusion of $nb$ in the $MS_{juggling}$ this is hard to explain unless you first understood the conceptual version of the equations above.
+From this rearrangement we use the labels below. Notice the inclusion of $na$ in the $MS_{preparation}$ this is hard to explain unless you first understood the conceptual version of the equations above. Indeed, people who tend to explain ANOVA using a "between vs within" explanation usually need to skip over or "brush away" the $na$ term in their explanations.
 
 $MS_{preparation} = na\frac{\sum (\overline{x_{B_i}}-\bar{\bar{x}})^2}{b-1} = 217.2333$
 
@@ -985,7 +995,7 @@ Imagine the population-level scenario where there is no interaction and only mai
 
 Now consider the population-level scenario where there is an interaction. In this case, when we create residual population-level cell means, they would not all be equal to zero. That's because there is more going on than the main effects.
 
-The interpretation challenge occurs when we move to the sample level because the sample-level residuals may differ, due to random sampling, from the population-residuals. To help distinguish between these two situations we calculate a p-value. The p-value tells us how likely we are to have sample-level cell means this large (or larger) if the population-level residual cell means are zero. 
+The interpretation challenge occurs when we move to the sample level because the sample-level residuals may differ, due to random sampling, from the population-residuals. To help distinguish between these two situations we calculate a $p$-value. The $p$-value tells us how likely we are to have sample-level cell means this large (or larger) if the population-level residual cell means are zero. 
 
 #### Degrees of freedom for $AB$ total variance
 
@@ -1023,7 +1033,7 @@ $$
 \frac{s_{people}^2}{n}
 $$
 
-### F-value for $AB$
+### $F$-value for $AB$
 
 So F-ratio comparing these two estimates is:
 
@@ -1034,11 +1044,11 @@ F &= \frac{\text{estimated total variance}}{\text{estimated variance due to rand
 &=  4.49\\
 \end{align}
 
-### p-value for $AB$
+### $p$-value for $AB$
 
-This sample F-value tells us that, with these data, the **estimated** total variance of juggling means is 4.49 times larger than than we would **estimate** due to random sampling alone. Is this large or small? It's hard to tell. As well,  notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is, when the population means are equal, in the context of the the number of populations and the sample sizes. [Recall Central F-distributions from a previous chapter.](https://dstanley4.github.io/psyc6060bookdown/deep-dive-sampling-and-anova.html#central-f-distributions)
+This sample $F$-value tells us that, with these data, the **estimated** total variance of juggling means is 4.49 times larger than than we would **estimate** due to random sampling alone. Is this large or small? It's hard to tell. As well,  notice the use of word **estimate(d)** in the previous sentences. We are looking at estimates that themselves may vary due to random sampling error. So we need to know how likely this is, when the population means are equal, in the context of the number of populations and the sample sizes. [Recall Central $F$-distributions from a previous chapter.](https://dstanley4.github.io/psyc6060bookdown/deep-dive-sampling-and-anova.html#central-f-distributions)
 
-To interpret an F-value for the main effect of $AB$, you need to think about all the F-values that could have occurred - when the population means are equal (i.e., $\sigma_{AB}^2=0$). More specifically, we have to imagine all of the F-values with 2 and 24 degrees of freedom in the Central F-distribution. This distribution is illustrated below:
+To interpret an $F$-value for the main effect of $AB$, you need to think about all the $F$-values that could have occurred - when the population means are equal (i.e., $\sigma_{AB}^2=0$). More specifically, we have to imagine all of the $F$-values with 2 and 24 degrees of freedom in the Central $F$-distribution. This distribution is illustrated below:
 
 ```{r, echo = F}
 fcentral = rf(n = 100000, df1=2, df2=24)
@@ -1053,7 +1063,7 @@ ggplot(mdf, aes(x=fvalue)) +
   theme_classic(18)
 ```
 
-To assign a p-value to the F-value that we obtained, $F = 4.49$ we determine the proportion of the Central F-distribution (with 2 and 24 degrees of freedom) that is equal to, or more extreme, than the F-value we obtained in our study. The F-value we obtained is positioned in Central F-distribution below.
+To assign a $p$-value to the $F$-value that we obtained, $F = 4.49$ we determine the proportion of the Central $F$-distribution (with 2 and 24 degrees of freedom) that is equal to, or more extreme, than the $F$-value we obtained in our study. The $F$-value we obtained is positioned in Central $F$-distribution below.
 
 
 ```{r, echo = F}
@@ -1072,13 +1082,13 @@ ggplot(mdf, aes(x=fvalue)) +
 ```
 
 
-In the graph above you can see the F-value we obtained (4.49) is somewhat to the right side of the Central F-distribution. In fact, the proportion of the F-distribution that is equal to, or more extreme, than 4.49 is .022 (i.e. 2.2%). So we say the p-value is $p = .022$.
+In the graph above you can see the $F$-value we obtained (4.49) is somewhat to the right side of the Central $F$-distribution. In fact, the proportion of the $F$-distribution that is equal to, or more extreme, than 4.49 is .022 (i.e. 2.2%). So we say the $p$-value is $p = .022$.
 
 Consequently, under the assumption of equal residual population means, our data (or more extreme data) is very unlikely ($p = .022$). Therefore, we reject the assumption that the population residual means are equal. We conclude those population means **may** be different. Which implies there is an interaction.
 
 When there is an interaction you are concluding the two independent variables combine to influence the dependent variable. In our example study, you could say the impact of juggling on calmness before the exam depends on how much students prepared. Or you also say the impact of preparation on calmness before the exam depends on whether students juggled or not during breaks.
 
-Remember the p-value is the **probability of our data, or more extreme data,** assuming the null hypothesis is true.
+Remember the $p$-value is the **probability of our data, or more extreme data,** assuming the null hypothesis is true.
 
 
 ### $AB$ conceptual (interaction)
@@ -1112,7 +1122,7 @@ Comparison using $F$-ratio | $\frac{\frac{\sum (\overline{x_{residual_i}})^2}{(a
 
 If you have a comparison (with 2 means) that was planned prior to collecting data, one option to test the comparison is the t-test. This is perhaps the most frequently used approach in some research areas. Consider a scenario where you have a one-sided planned comparison (i.e., an a priori comparison) involving the cell 1 (yes juggling/low preparation) with cell 3 (yes juggling / high preparation). You could proceed as follows.
 
-**t-test and p-value calculation**
+**t-test and $p$-value calculation**
 
 1) Obtain the sample data for these cells
 
@@ -1141,7 +1151,7 @@ print(tout)
 ```
 
 
-3) Divide the p-value by 2 to obain the one-sided p-value.
+3) Divide the $p$-value by 2 to obain the one-sided $p$-value.
 
 $0.005444/2=0.002722$
 
